re PR c++/18123 (ICE on templated enum)

PR c++/18123
	* parser.c (cp_parser_type_specifier): Catch template declaration
	of enum.

	* g++.dg/parse/enum2.C: New test.
	* g++.old-deja/g++.pt/enum5.C: Adjust error location.

From-SVN: r91630